--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <script>
     // Replace 'YOUR_GITHUB_RAW_URL' with the raw URL of your GitHub file
-    var githubRawUrl = 'https://raw.githubusercontent.com/your-username/your-repo/main/test.txt';
+    var githubRawUrl = 'https://raw.githubusercontent.com/8eny/RR/main/test.txt';
 
     // Fetch the raw text from the GitHub file
     fetch(githubRawUrl)
